pkl-core/src/test/files/LanguageSnippetTests/input/errors/power/typeConstraints10.pkl
local list = List(1, 2, 3)

foo: Dynamic(this == new Dynamic { ...list })
